...
        android:textColor="#FF8F00"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bugun" />

    <EditText
        android:id="@+id/kilogir"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
...

        android:background="@drawable/kalori"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilogir" />

    <EditText
        android:id="@+id/k2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
...
        android:layout_marginBottom="40dp"
        android:text="@string/_5l"
        app:layout_constraintBottom_toBottomOf="@+id/su"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/su_litre"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
...
        android:layout_width="60dp"
        android:layout_height="22dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="264dp"
        android:layout_marginRight="264dp"
        android:text="@string/uyku"
        app:layout_constraintEnd_toEndOf="@+id/ok3"
        app:layout_constraintTop_toTopOf="@+id/uyku" />

    <TextView
        android:id="@+id/k7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginBottom="40dp"
        android:text="@string/_24"
        app:layout_constraintBottom_toBottomOf="@+id/uyku"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/k6"
        android:layout_width="65dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
...
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/anasayfa"
        app:layout_constraintTop_toTopOf="@+id/anasayfa" />

    <ImageButton
        android:id="@+id/ok1"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"

        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintEnd_toEndOf="@+id/kalori"
        app:layout_constraintTop_toTopOf="@+id/kalori"
        app:srcCompat="@drawable/ok" />

    <ImageButton
        android:id="@+id/ok2"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintEnd_toEndOf="@+id/su"
...
        android:layout_marginEnd="220dp"
        android:layout_marginRight="220dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tarif"
        app:srcCompat="@drawable/anasayfaa" />

    <ImageButton
        android:id="@+id/tarif"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ayarlar"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:srcCompat="@drawable/tariflerr" />

    <ImageButton
        android:id="@+id/ayarlar"
...
        android:id="@+id/boy_yazi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:text="@string/boy"
        android:textColor="#FF8F00"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anasayfa" />

...
