...
    <string name="isim" translatable="false">isim</string>

    <string name="join" translatable="false">join</string>

    <string name="join_name_surname" translatable="false">Join Name-Surname</string>

    <string name="kiloo" translatable="false">kilo</string>

    <string name="ayarlar" translatable="false">AYARLAR</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
...

    <!--        <string name="zb_1000">ZB:1000</string>-->


    <string name="se" translatable="false">Seç</string>

    <string name="todoo" translatable="false">TODO</string>


    <!--          Giris sayfasi       -->
    <string name="Toast_giris">Alanlar boş</string>
    <string name="Toast_giris_2">Kayıt başarılı</string>
    <string name="Toast_giris_3">Bu kullanıcı adı ya da e-posta zaten kayıtlı</string>
    <string name="Toast_giris_4">Parola eşleşmiyor</string>
    <string name="Toast_giris_5">Yanlış kullanıcı adı, e-posta veya şifre</string>
    <string name="kayit">KAYIT</string>
    <string name="sifre_tekrar">Şifre tekrar</string>
    <string name="sifre">Şifre</string>
    <string name="giri_i_in_nce_kay_t">Giriş için önce kayıt!</string>
    <string name="g_r">GİRİŞ</string>
    <string name="kullanici_adi">Mail/Kullanıcı adı</string>


    <!--    anasayfa arayuzu -->
    <string name="anasayfa">ANASAYFA</string>
    <string name="rn_1000">örn:1000</string>
    <string name="kalori">KALORİ</string>
...
    <string name="Toast_profil_1">Dil seçin...</string>
    <string name="sim_soyisim">İsim-Soyisim</string>
    <string name="boy">Boy</string>
    <string name="kilo">Kilo</string>
    <string name="bayan">Bayan</string>
    <string name="bay">Bay</string>
    <string name="dil">Dil</string>
    <string name="checkbox">CheckBox</string>
    <string name="kaydet">KAYDET</string>


    <!--    Uyku arayuzu -->
    <string name="Toast_uyku_1">Uyku süresi eklendi</string>

...
