...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Profil">

    <EditText
        android:id="@+id/namesurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="140dp"
        android:autofillHints=""
...
        android:hint="@string/boy"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namesurname" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="312dp"
        android:layout_height="147dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="324dp"
...
            android:layout_marginLeft="130dp"
            android:layout_marginTop="30dp"
            android:checked="true"
            android:text="@string/bay" />

        <CheckBox
            android:id="@+id/btnDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox" />

    </RadioGroup>

...
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/geri" />

    <ImageButton
        android:id="@+id/kayit2"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
...
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/kayit2"
        app:layout_constraintEnd_toEndOf="@+id/kayit2"
        app:layout_constraintStart_toStartOf="@+id/kayit2" />

    <Button
        android:id="@+id/sprache"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:background="@drawable/btn_giris"
        android:text="@string/dil"
        android:textColor="#FFF"
        android:textSize="18sp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioSex"
        tools:ignore="MissingConstraints"></Button>

    <ImageView
        android:id="@+id/btn_anasayfa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kayit2"
...
