...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/yemek_sec_resim" />

    <ImageView
        android:id="@+id/yemek_ekle_arayuz_btn_ekle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yemek_ekle_arayuz_ust_logo"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/yemek_sec_btn_ekle_yeni" />

    <ImageView
        android:id="@+id/yemek_ekle_arayuz_btn_home"
        android:layout_width="64dp"
        android:layout_height="63.4dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/btn_yemek_sec_geri_sayfa"
        tools:ignore="RtlCompat" />

    <AutoCompleteTextView
        android:id="@+id/yemek_ekle_arama_cubugu"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="30dp"
        android:completionThreshold="1"
        android:dropDownAnchor="@+id/text_view_yemekler"
...
